GNOME Bugzilla – Bug 656829
empathy crashed with SIGSEGV in __memcpy_ssse3()
Last modified: 2011-08-22 13:31:08 UTC
Open bug in launchpad.net https://bugs.launchpad.net/bugs/828802 "I'm working with empathy and crash."
+ Trace 228134
Could you please paste the output of: ls -l /home/username/.cache/telepathy/avatars/gabble/jabber/de0a606f4e61733076fe1f86f3588b4186276e58
$ ls -s /home/caravena/.cache/telepathy/avatars/gabble/jabber/de0a606f4e61733076fe1f86f3588b4186276e58 4 /home/caravena/.cache/telepathy/avatars/gabble/jabber/de0a606f4e61733076fe1f86f3588b4186276e58
"ls -s" != "ls -l"
$ ls -l /home/caravena/.cache/telepathy/avatars/gabble/jabber/de0a606f4e61733076fe1f86f3588b4186276e58 -rw-rw-r-- 1 caravena caravena 2997 2011-08-18 18:20 /home/caravena/.cache/telepathy/avatars/gabble/jabber/de0a606f4e61733076fe1f86f3588b4186276e58
I'm wondering if this could be a weird side effect of bug #653599. Can you reproduce with Empathy 3.1.5.1?
I just reproduced it.
Created attachment 194361 [details] [review] contact_set_avatar_from_tp_contact: don't crash if we failed to load the avatar
Attachment 194361 [details] pushed as f60338e - contact_set_avatar_from_tp_contact: don't crash if we failed to load the avatar