contact_set_avatar_from_tp_contact: don't crash if we failed to load the avatar

https://bugzilla.gnome.org/show_bug.cgi?id=656829